// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AuthContainer component matching snapshot 1`] = `
<div
  className="css-0"
  title="auth-container"
>
   AuthContainer 
</div>
`;

exports[`should render SignIn component matching snapshot 1`] = `
<div
  className="css-0"
  title="sign-in"
>
   signIn 
</div>
`;
